--- a/Task1_Story/Task1_Story.csproj
+++ b/Task1_Story/Task1_Story.csproj
@@ -43,16 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal.cs" />
-    <Compile Include="Bear.cs" />
-    <Compile Include="Bunny.cs" />
-    <Compile Include="Fox.cs" />
-    <Compile Include="Frog.cs" />
-    <Compile Include="Hedgehog.cs" />
+    <Compile Include="Animal\Animal.cs" />
+    <Compile Include="AnimalException.cs" />
+    <Compile Include="Animal\Bear.cs" />
+    <Compile Include="Animal\Bunny.cs" />
+    <Compile Include="Animal\Dinosaur.cs" />
+    <Compile Include="Animal\Fox.cs" />
+    <Compile Include="Animal\Frog.cs" />
+    <Compile Include="Animal\Hedgehog.cs" />
     <Compile Include="House.cs" />
-    <Compile Include="Mouse.cs" />
+    <Compile Include="IButtleRoar.cs" />
+    <Compile Include="Animal\Mouse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoryController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
