add generics, add new class Generator, change program logic

--- a/Task1_Story/Task1_Story.csproj
+++ b/Task1_Story/Task1_Story.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Animal\Fox.cs" />
     <Compile Include="Animal\Frog.cs" />
     <Compile Include="Animal\Hedgehog.cs" />
+    <Compile Include="Generator.cs" />
     <Compile Include="House.cs" />
     <Compile Include="IButtleRoar.cs" />
     <Compile Include="Animal\Mouse.cs" />
